tests/ui/inference/downcast-fn-ptr-placeholder.stderr
error[E0282]: type annotations needed
  --> $DIR/downcast-fn-ptr-placeholder.rs:9:22
   |
LL |     b.downcast_ref::<fn(_)->_>();
   |                      ^^^^^^^^ cannot infer type of the type parameter `T` declared on the method `downcast_ref`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
